--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node server.js",
+    "generateDoc": "node swagger/swagger.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -19,6 +21,8 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "mongose": "^0.0.2-security",
+    "swagger-autogen": "^2.23.7",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
   }
 }
