vital save added

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.1",
     "body-parser": "^1.20.3",
+    "bullmq": "^5.41.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
@@ -21,6 +23,7 @@
     "mongodb": "^6.13.1",
     "mongoose": "^8.11.0",
     "mongose": "^0.0.2-security",
+    "node-cache": "^5.1.2",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^11.1.0"
